--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@
     </label>
     <input class="block btn" type="submit" value="下载">
     <div class="tips"><p>GitHub文件链接带不带协议头都可以，支持release、archive以及文件，右键复制出来的链接都是符合标准的，更多用法、clone加速请参考<a href="https://hunsh.net/archives/23/">这篇文章</a>。</p>
-      <p><del>release、archive使用Cloudflare加速，文件会跳转至JsDelivr</del></p>
-        <p>所有文件使用 Cloudflare + Vercel 加速</p>
+        <p>release、archive使用Cloudflare加速</p>
+        <p>项目文件跳转至JsDelivr</p>
+        <!-- <p>所有文件使用 Cloudflare + Vercel 加速</p> -->
         <p>注意，不支持项目文件夹</p></div>
     <div class="example">
         <p>分支源码：https://github.com/hunshcn/project/archive/master.zip</p>
